--- a/Project_CS511/Project_CS511.csproj
+++ b/Project_CS511/Project_CS511.csproj
@@ -12,8 +12,6 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,69 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.Core.3.7.100.14\lib\net45\AWSSDK.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="AWSSDK.SecurityToken, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
-      <HintPath>..\packages\AWSSDK.SecurityToken.3.7.100.14\lib\net45\AWSSDK.SecurityToken.dll</HintPath>
-    </Reference>
-    <Reference Include="DnsClient, Version=1.6.1.0, Culture=neutral, PublicKeyToken=4574bb5573c51424, processorArchitecture=MSIL">
-      <HintPath>..\packages\DnsClient.1.6.1\lib\net471\DnsClient.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Extensions.Logging.Abstractions.2.0.0\lib\netstandard2.0\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Win32.Registry, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Win32.Registry.5.0.0\lib\net461\Microsoft.Win32.Registry.dll</HintPath>
-    </Reference>
-    <Reference Include="MongoDB.Bson, Version=2.23.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Bson.2.23.1\lib\netstandard2.0\MongoDB.Bson.dll</HintPath>
-    </Reference>
-    <Reference Include="MongoDB.Driver, Version=2.23.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.2.23.1\lib\netstandard2.0\MongoDB.Driver.dll</HintPath>
-    </Reference>
-    <Reference Include="MongoDB.Driver.Core, Version=2.23.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Driver.Core.2.23.1\lib\netstandard2.0\MongoDB.Driver.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="MongoDB.Libmongocrypt, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MongoDB.Libmongocrypt.1.8.0\lib\net472\MongoDB.Libmongocrypt.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpCompress, Version=0.30.1.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpCompress.0.30.1\lib\net461\SharpCompress.dll</HintPath>
-    </Reference>
-    <Reference Include="Snappier, Version=1.0.0.0, Culture=neutral, PublicKeyToken=a1b25124e6e13a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Snappier.1.0.0\lib\netstandard2.0\Snappier.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.AccessControl, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.AccessControl.5.0.0\lib\net461\System.Security.AccessControl.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.Principal.Windows, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Text.Encoding.CodePages, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Text.Encoding.CodePages.5.0.0\lib\net461\System.Text.Encoding.CodePages.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -107,9 +44,6 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="ZstdSharp, Version=0.7.3.0, Culture=neutral, PublicKeyToken=8d151af33a4ad5cf, processorArchitecture=MSIL">
-      <HintPath>..\packages\ZstdSharp.Port.0.7.3\lib\net461\ZstdSharp.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Component\adBlock.cs">
@@ -118,17 +52,17 @@
     <Compile Include="Component\adBlock.Designer.cs">
       <DependentUpon>adBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\addcard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\addcard.Designer.cs">
+      <DependentUpon>addcard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\adSlide.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Component\adSlide.Designer.cs">
       <DependentUpon>adSlide.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Component\chatBlock.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Component\chatBlock.Designer.cs">
-      <DependentUpon>chatBlock.cs</DependentUpon>
     </Compile>
     <Compile Include="Component\foodBlock.cs">
       <SubType>UserControl</SubType>
@@ -136,11 +70,11 @@
     <Compile Include="Component\foodBlock.Designer.cs">
       <DependentUpon>foodBlock.cs</DependentUpon>
     </Compile>
-    <Compile Include="Component\foodCommentBubble.cs">
+    <Compile Include="Component\foodlist.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Component\foodCommentBubble.Designer.cs">
-      <DependentUpon>foodCommentBubble.cs</DependentUpon>
+    <Compile Include="Component\foodlist.Designer.cs">
+      <DependentUpon>foodlist.cs</DependentUpon>
     </Compile>
     <Compile Include="Component\foodSlide.cs">
       <SubType>UserControl</SubType>
@@ -148,11 +82,29 @@
     <Compile Include="Component\foodSlide.Designer.cs">
       <DependentUpon>foodSlide.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\historypayment.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\historypayment.Designer.cs">
+      <DependentUpon>historypayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\menuBar.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Component\menuBar.Designer.cs">
       <DependentUpon>menuBar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\paymentadvice.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\paymentadvice.Designer.cs">
+      <DependentUpon>paymentadvice.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\paymentlist.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\paymentlist.Designer.cs">
+      <DependentUpon>paymentlist.cs</DependentUpon>
     </Compile>
     <Compile Include="Component\restaurantBlock.cs">
       <SubType>UserControl</SubType>
@@ -166,18 +118,17 @@
     <Compile Include="Component\restaurantSlide.Designer.cs">
       <DependentUpon>restaurantSlide.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataSource.cs" />
     <Compile Include="main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="main.Designer.cs">
       <DependentUpon>main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pages\account.cs">
+    <Compile Include="Pages\food.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Pages\account.Designer.cs">
-      <DependentUpon>account.cs</DependentUpon>
+    <Compile Include="Pages\food.Designer.cs">
+      <DependentUpon>food.cs</DependentUpon>
     </Compile>
     <Compile Include="Pages\home.cs">
       <SubType>UserControl</SubType>
@@ -185,46 +136,43 @@
     <Compile Include="Pages\home.Designer.cs">
       <DependentUpon>home.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pages\message.cs">
+    <Compile Include="Pages\payment.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Pages\message.Designer.cs">
-      <DependentUpon>message.cs</DependentUpon>
+    <Compile Include="Pages\payment.Designer.cs">
+      <DependentUpon>payment.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SubPage\foodSubPage.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="SubPage\foodSubPage.Designer.cs">
-      <DependentUpon>foodSubPage.cs</DependentUpon>
-    </Compile>
-    <Compile Include="testDatabase.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="testDatabase.Designer.cs">
-      <DependentUpon>testDatabase.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Component\adBlock.resx">
       <DependentUpon>adBlock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\addcard.resx">
+      <DependentUpon>addcard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Component\adSlide.resx">
       <DependentUpon>adSlide.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Component\chatBlock.resx">
-      <DependentUpon>chatBlock.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Component\foodBlock.resx">
       <DependentUpon>foodBlock.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Component\foodCommentBubble.resx">
-      <DependentUpon>foodCommentBubble.cs</DependentUpon>
+    <EmbeddedResource Include="Component\foodlist.resx">
+      <DependentUpon>foodlist.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Component\foodSlide.resx">
       <DependentUpon>foodSlide.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Component\historypayment.resx">
+      <DependentUpon>historypayment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Component\menuBar.resx">
       <DependentUpon>menuBar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\paymentadvice.resx">
+      <DependentUpon>paymentadvice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\paymentlist.resx">
+      <DependentUpon>paymentlist.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Component\restaurantBlock.resx">
       <DependentUpon>restaurantBlock.cs</DependentUpon>
@@ -235,38 +183,29 @@
     <EmbeddedResource Include="main.resx">
       <DependentUpon>main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pages\account.resx">
-      <DependentUpon>account.cs</DependentUpon>
+    <EmbeddedResource Include="Pages\food.resx">
+      <DependentUpon>food.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\home.resx">
       <DependentUpon>home.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pages\message.resx">
-      <DependentUpon>message.cs</DependentUpon>
+    <EmbeddedResource Include="Pages\payment.resx">
+      <DependentUpon>payment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="SubPage\foodSubPage.resx">
-      <DependentUpon>foodSubPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="testDatabase.resx">
-      <DependentUpon>testDatabase.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="libmongocrypt.dylib" />
-    <None Include="libmongocrypt.so" />
-    <None Include="packages.config" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -310,37 +249,10 @@
     <None Include="icons\wallet_active.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="icons\kfc_ad.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="icons\star.png" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="icons\trash.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="icons\bubble\output-onlinepngtools %286%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="icons\bubble\output-onlinepngtools %287%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="icons\ads\kfc_ad.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="icons\add.png" />
-    <None Include="icons\back.png" />
-    <Content Include="icons\food\food1.png" />
-    <Content Include="mongocrypt.dll" />
-    <None Include="icons\white_pen.png" />
-    <None Include="icons\pen.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\AWSSDK.SecurityToken.3.7.100.14\analyzers\dotnet\cs\AWSSDK.SecurityToken.CodeAnalysis.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets'))" />
-  </Target>
 </Project>
