--- a/Project_CS511/Project_CS511.csproj
+++ b/Project_CS511/Project_CS511.csproj
@@ -262,6 +262,12 @@
     <Compile Include="Component\addcard.Designer.cs">
       <DependentUpon>addcard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\addLocation.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\addLocation.Designer.cs">
+      <DependentUpon>addLocation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\adSlide.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -415,12 +421,6 @@
     <Compile Include="SubPage\maplocation.Designer.cs">
       <DependentUpon>maplocation.cs</DependentUpon>
     </Compile>
-    <Compile Include="test.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="test.Designer.cs">
-      <DependentUpon>test.cs</DependentUpon>
-    </Compile>
     <Compile Include="testDatabase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -432,6 +432,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Component\addcard.resx">
       <DependentUpon>addcard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\addLocation.resx">
+      <DependentUpon>addLocation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Component\adSlide.resx">
       <DependentUpon>adSlide.cs</DependentUpon>
@@ -489,9 +492,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SubPage\maplocation.resx">
       <DependentUpon>maplocation.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="test.resx">
-      <DependentUpon>test.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="testDatabase.resx">
       <DependentUpon>testDatabase.cs</DependentUpon>
