--- a/Project_CS511/Project_CS511.csproj
+++ b/Project_CS511/Project_CS511.csproj
@@ -268,6 +268,24 @@
     <Compile Include="Component\adSlide.Designer.cs">
       <DependentUpon>adSlide.cs</DependentUpon>
     </Compile>
+    <Compile Include="Component\Cart\addressBlock1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Cart\addressBlock1.Designer.cs">
+      <DependentUpon>addressBlock1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\Cart\foodBlockCart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Cart\foodBlockCart.Designer.cs">
+      <DependentUpon>foodBlockCart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Component\Cart\OrderBlock.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Component\Cart\OrderBlock.Designer.cs">
+      <DependentUpon>OrderBlock.cs</DependentUpon>
+    </Compile>
     <Compile Include="Component\chatBlock.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -391,6 +409,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubPage\cartSubPage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SubPage\cartSubPage.Designer.cs">
+      <DependentUpon>cartSubPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="SubPage\foodSubPage.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -442,6 +466,15 @@
     <EmbeddedResource Include="Component\adSlide.resx">
       <DependentUpon>adSlide.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Component\Cart\addressBlock1.resx">
+      <DependentUpon>addressBlock1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Cart\foodBlockCart.resx">
+      <DependentUpon>foodBlockCart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Component\Cart\OrderBlock.resx">
+      <DependentUpon>OrderBlock.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Component\chatBlock.resx">
       <DependentUpon>chatBlock.cs</DependentUpon>
     </EmbeddedResource>
@@ -483,6 +516,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Component\SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubPage\cartSubPage.resx">
+      <DependentUpon>cartSubPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SubPage\foodSubPage.resx">
       <DependentUpon>foodSubPage.cs</DependentUpon>
@@ -843,6 +879,7 @@
     <None Include="Resources\clock.png" />
     <None Include="Resources\aim.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.8.0\build\MongoDB.Libmongocrypt.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
